[gd_scene load_steps=11 format=3 uid="uid://sb4kjeceuvh7"]

[ext_resource type="FontFile" uid="uid://d2gw78mxtuajg" path="res://resources/fonts/MedievalSharp/MedievalSharp-Regular.ttf" id="1_l6cm7"]
[ext_resource type="Script" uid="uid://1r370tikveaj" path="res://scripts/main_menu.gd" id="1_wu84c"]
[ext_resource type="Texture2D" uid="uid://bur7kig0jsrnu" path="res://resources/spritesheets/background/clouds/cloud1.png" id="2_5dd4i"]
[ext_resource type="FontFile" uid="uid://baqpv7w04b4ts" path="res://resources/fonts/Spirax/Spirax-Regular.ttf" id="2_ekxnf"]
[ext_resource type="Theme" uid="uid://cqcpovk8aw7nw" path="res://resources/retro_ui_theme.tres" id="3_bqqt6"]
[ext_resource type="Texture2D" uid="uid://brs8t1ueu4q34" path="res://resources/spritesheets/background/clouds/cloud3.png" id="3_lgwnu"]
[ext_resource type="Texture2D" uid="uid://2pjewrif88qy" path="res://resources/spritesheets/background/clouds/cloud5.png" id="4_flqon"]
[ext_resource type="Texture2D" uid="uid://dtfmilc52d882" path="res://resources/spritesheets/background/clouds/cloud7.png" id="5_rcqid"]
[ext_resource type="Texture2D" uid="uid://croo8hchsfabo" path="res://resources/spritesheets/background/grass/grass2.png" id="6_1ajci"]
[ext_resource type="Texture2D" uid="uid://cjeusay4h5qj4" path="res://resources/spritesheets/background/grass/grass4.png" id="7_7b55j"]

[node name="Main_Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wu84c")

[node name="ParallaxBG" type="Node2D" parent="."]

[node name="Sky" type="ColorRect" parent="ParallaxBG"]
custom_minimum_size = Vector2(2000, 1200)
layout_direction = 4
offset_left = -399.0
offset_top = -258.0
offset_right = 1601.0
offset_bottom = 942.0
color = Color(0.18852627, 0.62622964, 0.6521917, 1)
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="Cloud" type="Node2D" parent="ParallaxBG"]

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBG/Cloud"]
position = Vector2(127, 132)
texture = ExtResource("2_5dd4i")

[node name="Sprite2D2" type="Sprite2D" parent="ParallaxBG/Cloud"]
position = Vector2(414, 13)
texture = ExtResource("3_lgwnu")

[node name="Sprite2D3" type="Sprite2D" parent="ParallaxBG/Cloud"]
position = Vector2(996, 21)
texture = ExtResource("4_flqon")

[node name="Sprite2D4" type="Sprite2D" parent="ParallaxBG/Cloud"]
position = Vector2(703, 120)
texture = ExtResource("5_rcqid")

[node name="Ground" type="ColorRect" parent="ParallaxBG"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -398.0
offset_top = 446.0
offset_right = 1601.0
offset_bottom = 940.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 3
color = Color(0.26666668, 0.54901963, 0.36862746, 1)

[node name="Grass" type="Node2D" parent="ParallaxBG"]

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBG/Grass"]
position = Vector2(16, 435)
texture = ExtResource("6_1ajci")

[node name="Sprite2D2" type="Sprite2D" parent="ParallaxBG/Grass"]
position = Vector2(117, 435)
texture = ExtResource("7_7b55j")

[node name="Sprite2D3" type="Sprite2D" parent="ParallaxBG/Grass"]
position = Vector2(217, 435)
texture = ExtResource("6_1ajci")

[node name="Sprite2D4" type="Sprite2D" parent="ParallaxBG/Grass"]
position = Vector2(318, 435)
texture = ExtResource("7_7b55j")

[node name="Sprite2D5" type="Sprite2D" parent="ParallaxBG/Grass"]
position = Vector2(427, 435)
texture = ExtResource("6_1ajci")

[node name="Sprite2D6" type="Sprite2D" parent="ParallaxBG/Grass"]
position = Vector2(528, 435)
texture = ExtResource("7_7b55j")

[node name="Sprite2D7" type="Sprite2D" parent="ParallaxBG/Grass"]
position = Vector2(628, 435)
texture = ExtResource("6_1ajci")

[node name="Sprite2D8" type="Sprite2D" parent="ParallaxBG/Grass"]
position = Vector2(729, 435)
texture = ExtResource("7_7b55j")

[node name="Sprite2D9" type="Sprite2D" parent="ParallaxBG/Grass"]
position = Vector2(837, 435)
texture = ExtResource("6_1ajci")

[node name="Sprite2D10" type="Sprite2D" parent="ParallaxBG/Grass"]
position = Vector2(938, 435)
texture = ExtResource("7_7b55j")

[node name="Sprite2D11" type="Sprite2D" parent="ParallaxBG/Grass"]
position = Vector2(1038, 435)
texture = ExtResource("6_1ajci")

[node name="Sprite2D12" type="Sprite2D" parent="ParallaxBG/Grass"]
position = Vector2(1139, 435)
texture = ExtResource("7_7b55j")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_top = 165.0
offset_right = 1152.0
offset_bottom = 245.0
theme_override_fonts/normal_font = ExtResource("1_l6cm7")
theme_override_font_sizes/normal_font_size = 48
bbcode_enabled = true
text = "[wave]Kacang Hantu, Hati Hantu[/wave]"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_top = 255.0
offset_right = 1152.0
offset_bottom = 305.0
theme_override_fonts/font = ExtResource("2_ekxnf")
theme_override_font_sizes/font_size = 40
text = "a typing game"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(150, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = 46.0
offset_right = 75.0
offset_bottom = 199.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="PlayButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme = ExtResource("3_bqqt6")
text = "Play"

[node name="OptionButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme = ExtResource("3_bqqt6")
text = "Options"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme = ExtResource("3_bqqt6")
text = "Quit"

[connection signal="pressed" from="VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionButton" to="." method="_on_option_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
